--- a/src/App.css
+++ b/src/App.css
@@ -1,154 +1,219 @@
+@font-face {
+  font-family: "Quicksand";
+  src: url("./../public/Quicksand-VariableFont_wght.ttf");
+}
+/* For the scrollbar itself */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+/* For the scrollbar track */
+::-webkit-scrollbar-track {
+  background: #E38DEB; /* Track color */
+}
+
+/* For the scrollbar handle */
+::-webkit-scrollbar-thumb {
+  background: #400B34; /* Handle color */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #300D29; /* Handle hover color */
+}
+
+/* Firefox scrollbar customization */
+html {
+  scrollbar-width: thin; /* "auto", "thin", or "none" */
+  scrollbar-color: #400B34 #E38DEB; /* thumb and track color */
+}
+
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Press Start 2P', Arial, sans-serif;
-    background-color: #1a1a1a;
-    color: #00ff00; /* Green color for the text */
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden; /* Hide overflow to prevent scrollbars */
-    flex-direction: column; /* Set the main layout direction */
-    min-height: 100vh; /* Ensure the page takes up at least the viewport height */
-    position: relative; /* Set position to relative for stacking context */
-  }
-
-  header {
-    background-color: #333333;
-    padding: 1rem;
-    width: 100%;
-    text-align: center;
-  }
-
-  footer {
-    background-color: #333333;
-    padding: 0.5rem;
-    width: 100%;
-    text-align: center;
-  }
-
-  .content {
-    max-width: 600px;
-    padding: 2rem;
-    text-align: left;
-    margin: 0 auto; /* Center the container */
-  }
-
-  h1 {
-    margin: 0;
-    font-size: 2rem;
-    color: #ffffff; /* White color for the title */
-  }
-
-  p {
-    margin: 1rem 0;
-    font-size: 1.2rem;
-  }
-
-  .icon {
-    display: inline-block;
-    margin-right: 5px;
-  }
-
-  a {
-    color: #0000ff; /* Dark blue color for the links */
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-
-/* Retro TV Screen Effect with Flickering, Animated White Noise, and Content Noise */
-.retro-tv {
-  background-color: #000; /* Dark background */
-  color: #fff; /* Green text */
-  /* font-family: 'Courier New', monospace;*/
-  text-shadow: 1px 1px 2px #00f, -1px -1px 2px #00f, 1px -1px 2px #00f, -1px 1px 2px #00f; /* Glowy text effect */
-  border: 10px solid #333; /* Chunky border */
-  padding: 20px; /* Some space inside */
-  box-shadow: inset 0 0 10px rgba(0, 255, 0, 0.5), 0 0 20px rgba(0, 255, 0, 0.5); /* Inner glow and outer glow */
-  animation: flicker 2s infinite alternate; /* Flickering animation */
-  position: relative; /* Required for the distortion overlay */
-  overflow: hidden; /* Hide overflow for lines */
-  height: 90%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Quicksand', Arial, sans-serif;
+  background-color: #1a1a1a;
+  color: #F0F0F1;
+  /* Green color for the text */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: scroll-y;
+  /* Hide overflow to prevent scrollbars */
+  flex-direction: column;
+  /* Set the main layout direction */
+  min-height: 100vh;
+  /* Ensure the page takes up at least the viewport height */
+  position: relative;
+  /* Set position to relative for stacking context */
 }
 
-.retro-tv::before {
-  content: "";
-  position: absolute;
-  top: -5%;
-  left: -5%;
-  right: -5%;
-  bottom: -5%;
-  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAEUlEQVR42gP4DwMMpqIFEAH/AA0pKADo3BBrqQAAAABJRU5ErkJggg==') repeat;
-  opacity: 0.2; /* Adjust opacity as desired */
-  pointer-events: none;
-  z-index: -1;
-  animation: noise-animation 1s infinite;
+.master-frame {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: #01010B;
+  width: 100%; /* Full width by default */
+  height: 100%; /* Full height by default */
+  padding: 0; /* No padding by default */
 }
 
-@keyframes noise-animation {
-  0% { transform: translate(0, 0); }
-  100% { transform: translate(5px, -5px); } /* Adjust values for noise movement */
+/* Media query for larger screens (like desktops) */
+@media (min-width: 768px) {
+  .master-frame {
+      width: 90%;
+      height: 90%;
+      margin: auto; /* Center the content */
+      padding: 0; /* Adjust padding as needed */
+  }
 }
 
-@keyframes flicker {
-  0% { opacity: 1; }
-  50% { opacity: 0.8; }
-  100% { opacity: 1; }
-}
-
-.noise {
-  position: absolute;
-  top: 0;
-  left: 0;
+header {
+  background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(23, 23, 27, 1) 30%, rgba(60, 33, 94, 1) 50%, rgba(51, 50, 55, 1) 65%);
   width: 100%;
-  height: 100%;
-  z-index: -10 /* make sure it overlays the content */
 }
 
-#noiseCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
+.header-content { /* New wrapper for flex items */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-foot-line {
   width: 100%;
-  height: 100%;
-  opacity: 0.15; /* Adjust opacity as desired */
+  height: 2px;
+  background: linear-gradient(90deg, rgba(43, 50, 66, 1) 0%, rgba(138, 80, 102, 1) 22%, rgba(130, 50, 143, 1) 48%, rgba(47, 43, 53, 1) 65%);
 }
 
-.corner-effect::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: radial-gradient(circle, transparent 60%, black 100%);
-  pointer-events: none; /* So it doesn't interfere with clicks */
+.header-logo,
+.header-title {
+  display: flex;
+  align-items: center;
 }
 
-.retro-tv::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
+.header-logo img {
+  width: 100px;
+  /* Adjust as needed */
+}
+
+.header-title h1 {
+  margin-left: 10px;
+  /* Space between logo and title */
+  font-size: 1.2em;
+  /* Adjust as needed */
+}
+
+.header-menu {
+  display: flex;
+  color: #F0F0F1;
+  margin-right: 10px;
+}
+
+.header-menu-item {
+  margin-left: 20px;
+  /* Space between menu items */
+  cursor: pointer;
+  /* Changes cursor on hover */
+}
+
+
+footer {
+  background-color: #03030D;
   width: 100%;
-  height: 100%;
-  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAEUlEQVR42gP4DwMMpqIFEAH/AA0pKADo3BBrqQAAAABJRU5ErkJggg==') repeat;
-  opacity: 0.1; /* Adjust opacity as desired */
-  pointer-events: none;
-  z-index: -2;
+  text-align: center;
 }
 
-.site-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px; /* Add some space around the logo */
+.footer-head-line {
+  width: 100%;
+  height: 2px;
+  background-color: #110a20;
 }
 
-.site-header .logo {
-    height: 50px; /* Adjust the size as needed */
-    width: auto;
+
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  width: 100%;
+}
+
+.content-wrapper {
+  display: flex;
+  width: 100%;
+  align-items: stretch; /* Aligns children's heights */
+}
+
+.info-list {  
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  padding: 0;
+  margin: 50px;
+} 
+
+.info-list-item {
+  display: flex;
+  flex-direction: column; /* Aligns children in a vertical stack */
+  align-items: flex-start; /* Aligns children to the start of the flex container */
+  width: 100%;
+  /* color: #DA52AE; */
+  color: #817170;
+  margin-top: 30px;
+}
+
+.info-list-item > .header-line {
+  width: 100%;
+  height: 2px;
+  background-color: #110a20;
+  margin-bottom: 10px;
+}
+
+.info-list-item > a {
+  color: #DA52AE;
+}
+
+.info-list-item > h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.2em;  
+  color: #F0F0F1;
+  /* Adjust as needed */
+}
+
+.info-list > h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1em;  
+  color: #EAEDF4;
+  /* Adjust as needed */
+}
+
+.three-d-plane-container {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+.icon {
+  display: inline-block;
+  margin-right: 5px;
+}
+
+a {
+  color: #0000ff;
+  /* Dark blue color for the links */
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
