--- a/src/components/AboutPage.css
+++ b/src/components/AboutPage.css
@@ -1,13 +1,17 @@
+@import url('./elements/ArticleBlocks.css');
+
 .content-wrapper {
     display: flex;
     width: 100%;
     align-items: stretch;
-    /* Aligns children's heights */
 }
 
-.three-d-plane-container {
-    width: 70%;
+.profile-picture {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+    border: 1px solid #ccc;
 }
