--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,13 +1,7 @@
+@import url('./elements/ArticleBlocks.css');
+
 .content-wrapper {
     display: flex;
     width: 100%;
     align-items: stretch;
-    /* Aligns children's heights */
-}
-
-.three-d-plane-container {
-    width: 70%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
